Exploding monkey challenge3 - wind effect added

--- a/Project29/Project29/Base.lproj/Main.storyboard
+++ b/Project29/Project29/Base.lproj/Main.storyboard
@@ -64,6 +64,13 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gmr-Dn-85d" userLabel="Wind Speed">
+                                <rect key="frame" x="370" y="100" width="285" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="4qk-I5-YsI"/>
@@ -75,6 +82,7 @@
                         <outlet property="playerNumber" destination="eZH-rJ-mrB" id="jOE-2n-J8N"/>
                         <outlet property="velocityLabel" destination="uXY-lA-T2c" id="hxd-mC-OuU"/>
                         <outlet property="velocitySlider" destination="G2w-Ic-cok" id="Dhw-64-wfg"/>
+                        <outlet property="windSpeed" destination="gmr-Dn-85d" id="RU1-WU-Vqp"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZV-WD-TEh" sceneMemberID="firstResponder"/>
